# sql_handler

./: .cproject  .gitignore  .project  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  SQLDefinitions.h  SQLHandler_doxygen  SQLLinker.h  SQLModule.cc  SQLModule.cpp  SQLModule.h  SQLPlugin.cc  SQLPlugin.cpp  SQLPlugin.h  SQLPluginList.h  SQLRequestHandler.cc  SQLRequestHandler.cpp  SQLRequestHandler.h  SQLResponseNames.h  configure.ac  doxy.conf  odbc.conf.in  sql.conf.in  sql_config.h  sql_module.spec
DEM/: README  SQLCheckPoint.cc  SQLCheckPoint.h  SQLDefaultErrorAction.h  SQLErrorFactory.h  SQLErrorManager.h  SQLInternalError.h  SQLInternalFatalError.h
DTM/: README  SQLBaseType.h  SQLCastAction.h  SQLComplexType.h  SQLDummySimpleType.h  SQLDynamicTypeFactory.h  SQLObjectTypeFactory.h  SQLSequence.h  SQLSimpleType.h  SQLTypeFactoryComponent.h  SQLTypeManager.h
action/: SQLAction.h  SQLActionFactory.h  SQLActionList.h  SQLActionManager.h  SQLDynamicActionFactory.h  SQLDynamicActionList.h  SQLObjectAction.h  SQLObjectActionFactory.h  SQLObjectActionList.h  SQLStaticAction.h  SQLStaticActionList.h
conf/: odbc.m4
connector/: SQLConnector.h  SQLErrorConnector.h  SQLHandleConnector.h  SQLSimpleConnector.h  SQLTypeConnector.h
container/: README  SQLAttribute.h  SQLConstraint.h  SQLContainer.cc  SQLContainer.cpp  SQLContainer.h  SQLContainerDefinitions.h  SQLContainerFactory.cc  SQLContainerFactory.cpp  SQLContainerFactory.h  SQLContainerStorage.h  SQLContainerStorageVolatile.cc  SQLContainerStorageVolatile.cpp  SQLContainerStorageVolatile.h  SQLDataHandlerInterface.h  SQLQuery.cc  SQLQuery.cpp  SQLQuery.h  SQLQueryDefinitions.h  SQLTextContainer.cc  SQLTextContainer.cpp  SQLTextContainer.h  SQLTextDefinitions.h
data/: .gitignore  README  mysql_1.sql  odbc.TEMPLATES.ini  sqlh.sql  sqlite.sql  sqlite_odbc.ini.in  sqlite_test.db  test_full.sql  test_full1.sql  test_full2.sql  test_int.sql
data/old/: isql.sh  mysql.sql  postgresql.sql  postgresql_odbc.ini  template.sh
docs/: FutureWorks.ppt  SqlHandler.ppt  UseCases.ppt  Utils.ppt
docs/images/.svn/: all-wcprops  entries
docs/images/.svn/text-base/: OLFS_contents_test_full_ASCII.png.svn-base  OLFS_contents_test_full_ASCII_constr_string_a.png.svn-base  OLFS_contents_test_full_HTML.png.svn-base  OLFS_contents_test_full_HTML_project_res.png.svn-base  OLFS_contents_test_full_constr_float_and_int.png.svn-base
handler/: SQLBuildDAS.h  SQLBuildDATA.h  SQLBuildDDS.h
handler/connector/: SQLCloseAction.h  SQLConnectAction.h  SQLNextTypeAction.h  SQLQueryAction.h
install/: bes.cmd  odbc.TEMPLATES.ini  sqlh.sql  template.sh
install.dir/: isql.sh  odbc.TEMPLATES.ini  postgresql_odbcinst.ini  sqlh.sql  sqlite_odbc.ini  sqlite_odbcinst.ini
install.dir/old/: postgres_template
old/: Makefile.am.old
sqlite/: Makefile.am  README  SQLITEPlugin.h  SQLITEPluginLoader.h  SQLITEResponseNames.h  SQLITESimpleConnector.h  SQLITETypeFactoryComponent.h  SQLITETypes.h  sqlite.conf.in
sqlite/data/: test_full.sql
templates/: .conf.in.template  COPYRIGHT  Connector.cc  Connector.cpp  Connector.h  ErrorFactoryComponent.cc  ErrorFactoryComponent.cpp  ErrorFactoryComponent.h  Makefile.am  Makefile.am.template  Module.cc  Module.h  Plugin.cc  Plugin.cpp  Plugin.h  PluginLoader.cc  PluginLoader.cpp  PluginLoader.h  ResponseNames.h  TypeFactoryComponent.cc  TypeFactoryComponent.cpp  TypeFactoryComponent.h  Types.h  configure.ac  module.spec.template
templates/data/: test_full.sql
tests/: Makefile.am  bes.conf.in  generate_data_baseline.sh.in  generate_metadata_baseline.sh.in  handler_tests_macros.m4  testsuite.at
tests/sql/: mysql.das.bescmd  mysql.data.bescmd  mysql.dds.bescmd  mysql_1.das.bescmd  mysql_1.data.bescmd  mysql_1.data_constraint.bescmd  mysql_1.data_constraint_2.bescmd  mysql_1.dds.bescmd  mysql_1.dds.bescmd.baseline  mysql_1.ddx.bescmd  mysql_1.ddx.bescmd.baseline  postgresql.das.bescmd.baseline  postgresql.data.bescmd  postgresql.data.bescmd.baseline  postgresql.data_constraint.bescmd  postgresql.data_constraint.bescmd.baseline  postgresql.data_constraint_2.bescmd  postgresql.data_constraint_2.bescmd.baseline  postgresql.dds.bescmd.baseline  postgresql.ddx.bescmd  postgresql.ddx.bescmd.baseline  sqlite.das.bescmd  sqlite.das.bescmd.baseline  sqlite.data.bescmd  sqlite.data.bescmd.baseline  sqlite.dds.bescmd  sqlite.dds.bescmd.baseline  sqlite.ddx.bescmd  sqlite.ddx.bescmd.baseline  sqlite.dmr.bescmd
unixODBC/: ODBCConnector.cc  ODBCConnector.cpp  ODBCConnector.h  ODBCErrorFactoryComponent.cc  ODBCErrorFactoryComponent.cpp  ODBCErrorFactoryComponent.h  ODBCPlugin.cc  ODBCPlugin.cpp  ODBCPlugin.h  ODBCPluginLoader.cc  ODBCPluginLoader.h  ODBCTypeFactoryComponent.cc  ODBCTypeFactoryComponent.cpp  ODBCTypeFactoryComponent.h  ODBCTypes.h
utils/: Clone.h  Delete.h  SharedPtr.h  SmartCast.h  SmartCheck.h  SmartList.h  SmartMap.h  StringMatch.cc  StringMatch.h
